--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 					</ol>
 				</section>
 
-				<section data-background="assets/images/background-secondary.png">
+				<section data-background="assets/images/background-secondary-black.png" data-background-color="black">
 					<em>Chapter 1</em>
 					<h2>Introduction to Peopleware</h2>
 					<p class="italic small">Make People Awesome</p>
@@ -260,10 +260,31 @@
 					<p class="xsmall">Sinergy, different visions (Planning Poker*)</p>
 				</section>
 
-				<section data-background="assets/images/background-secondary.png">
+				<section data-background="assets/images/background-secondary-black.png" data-background-color="black">
 					<em>Chapter 2</em>
 					<h2>Self-organized teams</h2>
 					<p class="italic small">The default way of management in nature</p>
+				</section>
+
+				<section>
+					<h3>Departments</h3>
+					<p class="xsmall">The Waterfall model</p>
+					<img src="assets/graphs/waterfall.svg" alt="Waterfall" class="large">
+					<!--
+					Requirements->Design:Requirements doc
+					Design->Implementation:Architecture doc
+					Implementation->Verification:Software
+					Verification->Implementation:QA failed
+					Verification->Done:Release
+					https://bramp.github.io/js-sequence-diagrams/
+					-->
+				</section>
+
+				<section>
+					<h3>Scrum teams (Squads)</h3>
+					<p class="xsmall">(Spotify Agile model)</p>
+					<img src="assets/images/spotify-squads.png" alt="Spotify Squads" class="large margin-none">
+					<p class="italic xxsmall"><a href="https://blog.praveen.science/my-experience-on-spotify-agile-methodology/#ourstack">Praveen Kumar Purushothaman - My Experience on Spotify Agile Methodology</a></p>
 				</section>
 
 				<section>
@@ -378,7 +399,7 @@
 					</table>
 				</section>
 
-				<section data-background="assets/images/background-secondary.png">
+				<section data-background="assets/images/background-secondary-black.png" data-background-color="black">
 					<em>Chapter 3</em>
 					<h2>Multifunctional teams</h2>
 					<p class="italic small">One for all and all for one</p>
@@ -544,7 +565,7 @@
 					<!-- https://www.mindtools.com/pages/article/newLDR_86.htm -->
 				</section>
 
-				<section data-background="assets/images/background-secondary.png">
+				<section data-background="assets/images/background-secondary-black.png" data-background-color="black">
 					<em>Chapter 4</em>
 					<h2>Productivity & Waste</h2>
 					<p class="italic small">More hours ≠ more work done</p>
@@ -652,7 +673,6 @@
 					<p class="italic small">(Francesco Cirillo, 1980s) </p>
 					<img src="assets/images/pomodoro.jpg" alt="Pomodoro" class="small margin-none">
 					<p class="small">Work per intervals of <strong>25 minutes</strong> (focused) + 5 min relax</p>
-
 				</section>
 
 				<section>
@@ -662,7 +682,7 @@
 
 				</section>
 
-				<section data-background="assets/images/background-secondary.png">
+				<section data-background="assets/images/background-secondary-black.png" data-background-color="black">
 					<em>Chapter 5</em>
 					<h2>Motivation</h2>
 					<p class="italic small">The Eye of the Tiger</p>
@@ -794,7 +814,7 @@
 					<div><img src="assets/images/dragon.jpg" alt="Dragon wall" class="large circle margin-none"></div>
 				</section>
 
-				<section data-background="assets/images/background-secondary.png">
+				<section data-background="assets/images/background-secondary-black.png" data-background-color="black">
 					<em>Chapter 6</em>
 					<h2>Improvement</h2>
 					<p class="small italic">Kaizen (改善) - change for better</p>
@@ -816,7 +836,7 @@
 					<img src="assets/images/retrospective-5.png" class="large" alt="retrospective">
 				</section>
 
-				<section data-background="assets/images/background-secondary.png">
+				<section data-background="assets/images/background-secondary-black.png" data-background-color="black">
 					<em>Chapter 7</em>
 					<h2>Conclusions</h2>
 				</section>
@@ -826,7 +846,7 @@
 						<li class="fragment">Think & Do</li>
 						<li class="fragment">People are <strong>not</strong> Interchangeable pieces</li>
 						<li class="fragment">Invest in a Healty/enjoyable environment</li>
-						<li class="fragment">Multifunctional teams are not made by FullStack people</li>
+						<li class="fragment">Have rules at the start and <strong>later break them</strong> (adapt according to the team’s needs).</li>
 						<li class="fragment">Grom the team (& persons)</li>
 						<li class="fragment">Take risks & Evolve!</li>
 					</ul>
