--- a/index.html
+++ b/index.html
@@ -297,6 +297,13 @@
 				</section>
 
 				<section>
+					<h3>Little or no standardisation of processes</h3>
+					<p class="xsmall">Don’t have a formal standard, <strong>cross-pollination</strong> is better than standardization</p>
+					<img src="assets/images/spotify-tribe.png" alt="Spotify Squads" class="large margin-none">
+					<p class="italic xxsmall"><a href="https://blog.praveen.science/my-experience-on-spotify-agile-methodology/#ourstack">Praveen Kumar Purushothaman - My Experience on Spotify Agile Methodology</a></p>
+				</section>
+
+				<section>
 					<h3>No Managers ≈ No testers</h3>
 					<p class="xsmall">"But do we need <strong>managers anyway</strong>, with all these self-steering teams nowadays? Management 3.0 believes management is the <strong>responsibility of everyone</strong>. It is like software testing... Depending on your organization you maybe need specialized people with a focus on management."</p>
 					<p class="xxsmall right">Jurgen Appelo</p>
