--- a/index.html
+++ b/index.html
@@ -282,7 +282,8 @@
 
 				<section>
 					<h3>Scrum teams (Squads)</h3>
-					<p class="xsmall">(Spotify Agile model)</p>
+					<p class="xxsmall">(Spotify Agile model)</p>
+					<p class="xsmall">They have <strong>end-to-end responsibilities</strong> and they work together towards their <strong>long-term mission</strong></p>
 					<img src="assets/images/spotify-squads.png" alt="Spotify Squads" class="large margin-none">
 					<p class="italic xxsmall"><a href="https://blog.praveen.science/my-experience-on-spotify-agile-methodology/#ourstack">Praveen Kumar Purushothaman - My Experience on Spotify Agile Methodology</a></p>
 				</section>
@@ -367,6 +368,13 @@
 
 				<section>
 					<h3>Security first</h3>
+				</section>
+
+				<section>
+					<h3>Alignment & Autonomy</h3>
+					<p class="xsmall">Autonomy with alignment increases <strong>motivation</strong>, <strong>quality</strong> and also fast releases.</p>
+					<img src="assets/images/spotify-alignment.png" class="large">
+					<p class="italic xxsmall"><a href="https://blog.praveen.science/my-experience-on-spotify-agile-methodology/#ourstack">Praveen Kumar Purushothaman - My Experience on Spotify Agile Methodology</a></p>
 				</section>
 
 				<section>
