--- a/index.html
+++ b/index.html
@@ -92,8 +92,8 @@
 
 				<section>
 					<div><img src="assets/images/triangle.png" class="medium margin-none"></div>
-					<p class="small">The <strong>three</strong> core aspects of computer technology are: <strong class="featured">hardware</strong>, <strong class="featured">software</strong> and <strong class="featured"><u>peopleware</u></strong>.</p>
-					<p class="xsmall italic">Peopleware refers to anything that has to do with the role of people including such issues as <strong>developer productivity, teamwork, group dynamics, the psychology of programming, project management, organizational factors, human interface design, and human-machine interaction</strong>...</p>
+					<p class="small">The <strong>three</strong> core aspects of computer technology are: <strong class="featured italic">hardware</strong>, <strong class="featured italic">software</strong> and <strong class="featured italic"><u>peopleware</u></strong>.</p>
+					<p class="xsmall italic">Peopleware refers to anything that has to do with the role of <strong class="featured">people</strong> including such issues as <strong>developer productivity, teamwork, group dynamics, the psychology of programming, project management, organizational factors, human interface design, and human-machine interaction</strong>...</p>
 				</section>
 
 				<section>
@@ -116,6 +116,8 @@
 
 				<section>
 					<h3>Are we in the same area?</h3>
+					<img src="assets/images/factory.png" alt="Factory" class="xsmall">
+					<img src="assets/images/ideas.png" alt="Ideas" class="xsmall" style="margin:0 70px">
 					<p><strong class="featured">Production</strong> vs <strong class="featured">Development</strong></p>
 					<table class="xsmall">
 						<tr class="width-50">
@@ -209,9 +211,12 @@
 				</section>
 
 				<section>
-					<h3>Good to Great</h3>
+					<h3>What differentiate <strong class="featured">Great</strong> companies</h3>
 					<p class="xxsmall">(Collins, 2001)</p>
-					<p>What differentiate <strong class="featured">great</strong> companies</p>
+
+					<p></p>
+					<img src="assets/images/book-collins-good-to-great.jpg" class="small margin-none left-30" alt="Good To Great">
+
 					<table class="xsmall">
 						<tr>
 							<td>1</td>
@@ -251,19 +256,14 @@
 					</table>
 				</section>
 
-				<section>
-					<h3>The Power of the Team</h3>
-					<img src="assets/images/gears.jpg" alt="gears" class="medium margin-none">
-					<p class="xsmall">Adaptative <strong>Complex</strong> System compound by <strong class="featured">different agents</strong></p>
-					<p class="small">Interacted, interconnected, organized (self)</p>
-					<p class="small">Adapt, compete & colaborate: <strong>objetive</strong></p>
-					<p class="xsmall">Sinergy, different visions (Planning Poker*)</p>
-				</section>
-
 				<section data-background="assets/images/background-secondary-black.png" data-background-color="black">
 					<em>Chapter 2</em>
 					<h2>Self-organized teams</h2>
 					<p class="italic small">The default way of management in nature</p>
+				</section>
+
+				<section data-background-video="assets/videos/youtube-starling.mp4">
+					<h3 class="text-shadow">Adaptative Complex System</h3>
 				</section>
 
 				<section>
@@ -281,6 +281,15 @@
 				</section>
 
 				<section>
+					<h3>The Power of the Team</h3>
+					<img src="assets/images/gears.jpg" alt="gears" class="medium margin-none">
+					<p class="xsmall">Adaptative <strong>Complex</strong> System compound by <strong class="featured">different agents</strong></p>
+					<p class="small">Interacted, interconnected, organized (self)</p>
+					<p class="small">Adapt, compete & colaborate: <strong>objetive</strong></p>
+					<p class="xsmall">Sinergy, different visions (Planning Poker*)</p>
+				</section>
+
+				<section>
 					<h3>Scrum teams (Squads)</h3>
 					<p class="xxsmall">(Spotify Agile model)</p>
 					<p class="xsmall">They have <strong>end-to-end responsibilities</strong> and they work together towards their <strong>long-term mission</strong></p>
@@ -291,9 +300,9 @@
 				<section>
 					<h3>What is a Self-organized team</h3>
 					<ul class="small">
-						<li>Autonomous: distributed control</li>
-						<li>Adaptable: adapts & improves</li>
-						<li>Responsable: collectively</li>
+						<li><strong>Autonomous</strong>: distributed control</li>
+						<li><strong>Adaptable</strong>: adapts & improves</li>
+						<li><strong>Responsable</strong>: collectively</li>
 					</ul>
 				</section>
 
@@ -306,8 +315,12 @@
 
 				<section>
 					<h3>No Managers ≈ No testers</h3>
-					<p class="xsmall">"But do we need <strong>managers anyway</strong>, with all these self-steering teams nowadays? Management 3.0 believes management is the <strong>responsibility of everyone</strong>. It is like software testing... Depending on your organization you maybe need specialized people with a focus on management."</p>
+					<p class="xsmall">"But do we <strong>need managers anyway</strong>, with all these self-steering teams nowadays? Management 3.0 believes management is the <strong>responsibility of everyone</strong>. It is like software testing... Depending on your organization you maybe need specialized people with a focus on management."</p>
 					<p class="xxsmall right">Jurgen Appelo</p>
+				</section>
+
+				<section>
+					<h3>Leadership Models</h3>
 				</section>
 
 				<section>
@@ -340,9 +353,6 @@
 
 				<section>
 					<h3>The Delegation Board</h3>
-					<div class="">
-							<img src="assets/images/gradient.jpg" alt="gradient" class="margin-none">
-					</div>
 					<table class="xsmall center">
 						<tr>
 							<th>Tell</th>
@@ -364,10 +374,6 @@
 						</tr>
 					</table>
 					@TODO image!
-				</section>
-
-				<section>
-					<h3>Security first</h3>
 				</section>
 
 				<section>
@@ -492,7 +498,19 @@
 							<td class="center xxbig">✖</td>
 							<td></td>
 						</tr>
+						<tr>
+							<td></td>
+							<td></td>
+							<td class="center xxxbig  featured">☠</td>
+							<td class="center xxbig"></td>
+							<td class="center xxbig"></td>
+							<td></td>
+							<td class="center xxxbig  featured">☠</td>
+						</tr>
 					</table>
+					<div class="xsmall">
+						✖ specialized | ■ knowledge
+					</div>
 				</section>
 
 				<section>
@@ -587,7 +605,31 @@
 				</section>
 
 				<section>
-					<h3>Crunch Mode: Work Harder (not smarter)</h3>
+					<h3>What is Productivity?</h3>
+					<p>Work (properly) Done / Effort & Resources</p>
+				</section>
+
+				<section>
+					<h3>How shouldn't we measure Productivity?</h3>
+					<ul class="small">
+						<li>Lines of Code</li>
+						<li>Commits</li>
+						<li>Hours</li>
+					</ul>
+				</section>
+
+				<section>
+					<h3>How shouldn't we increase Productivity?</h3>
+					<ul class="small">
+						<li>Working more hours</li>
+						<li>Adding more people to the project</li>
+						<li>Making others work harder (not smarter)</li>
+					</ul>
+				</section>
+
+				<section>
+					<h3>Crunch Mode</h3>
+					<img src="assets/images/whip.jpg" alt="Whip" class="small">
 					<p class="small"><strong>Motivation:</strong> no one leaves the office before the boss does</p>
 					<p class="small"><strong>Productivity:</strong> number of hours in front of your desktop, lines of code</p>
 					<p class="small"><strong>Incidences/Bugs:</strong> the team is not doing their work properly</p>
@@ -598,36 +640,43 @@
 					<p class="xsmall italic">(Evan Robinson, 2008)</p>
 					<!-- https://dexterity.wordpress.com/2008/08/21/why-crunch-mode-doesnt-work-6-lessons-by-evan-robinson/ -->
 					<ol class="xxsmall margin-bottom-15">
-						<li>Productivity <strong class="xxbig">varies</strong> over the course of the workday, with the greatest productivity occurring in the <strong class="xxbig">first four to six</strong> hours. After enough hours, productivity approaches zero; eventually it <strong>becomes negative</strong>.</li>
-						<li>Productivity is <strong class="xxbig">hard to quantify</strong> for knowledge workers.</li>
-						<li>Five-day weeks of eight-hour days <strong class="xxbig">maximize long-term output</strong> in every industry that has been studied over the past century. What makes us think that our industry is somehow exempt from this rule?</li>
-						<li>At <strong class="xxbig">60 hours per week</strong>, the loss of productivity caused by working longer hours <strong class="xxbig">overwhelms</strong> the extra hours worked within a couple of months.</li>
-						<li>Continuous work  <strong class="xxbig">reduces cognitive function</strong> 25% for every 24 hours. Multiple consecutive overnighters have a severe cumulative effect.</li>
-						<li> <strong class="xxbig">Error rates climb with hours worked</strong> and especially with loss of sleep . Eventually the odds catch up with you, and catastrophe occurs. When schedules are tight and budgets are big, is this a risk you can really afford to take?</li>
+						<li class="fragment">Productivity <strong class="xxbig">varies</strong> over the course of the workday, with the greatest productivity occurring in the <strong class="xxbig">first four to six</strong> hours. After enough hours, productivity approaches zero; eventually it <strong>becomes negative</strong>.</li>
+						<li class="fragment">Productivity is <strong class="xxbig">hard to quantify</strong> for knowledge workers.</li>
+						<li class="fragment">Five-day weeks of eight-hour days <strong class="xxbig">maximize long-term output</strong> in every industry that has been studied over the past century. What makes us think that our industry is somehow exempt from this rule?</li>
+						<li class="fragment">At <strong class="xxbig">60 hours per week</strong>, the loss of productivity caused by working longer hours <strong class="xxbig">overwhelms</strong> the extra hours worked within a couple of months.</li>
+						<li class="fragment">Continuous work  <strong class="xxbig">reduces cognitive function</strong> 25% for every 24 hours. Multiple consecutive overnighters have a severe cumulative effect.</li>
+						<li class="fragment"><strong class="xxbig">Error rates climb with hours worked</strong> and especially with loss of sleep . Eventually the odds catch up with you, and catastrophe occurs. When schedules are tight and budgets are big, is this a risk you can really afford to take?</li>
 					</ol>
 					<p></p>
 				</section>
 
 				<section>
-					<h3>Remove Waste</h3>
-					<ul class="small">
-						<li>Superflous documentation</li>
-						<li>Neverending meetings</li>
-						<li>Unused features</li>
-					</ul>
+					<h3>Increase productivity by removing Waste</h3>
+				</section>
+
+				<section>
+					<h3>Waste: Superflous documentation</h3>
+					<p class="small">Unmaintained, nobody will read it.</p>
+					<img src="assets/images/papers.png" class="large">
+				</section>
+
+				<section>
+					<h3>Waste: Neverending meetings</h3>
+					<p class="small">No Agenda, No Goals, No Actions</p>
+					<img src="assets/images/boring-meetings.jpg" class="large">
+				</section>
+
+				<section>
+					<h3>Waste: Unused features</h3>
+					<p class="small">Resources are limited.</p>
+					<img src="assets/images/spiderweb.gif" class="large">
 				</section>
 
 				<section>
 					<h3>Waste: Unreasonable Bureaucracy</h3>
 					<p class="small">Kills entrepreneurial spirit: creativity, flexibility, initiative, teamwork, self-confidence, and critical thinking.</p>
 					<p class="italic">Same approach, Same results</p>
-					<img src="assets/images/papers.png" class="large">
-				</section>
-
-				<section>
-					<h3>Waste: Maximize Failure</h3>
-					<p class="small">Secure environment: avoid fear to fail</p>
-					<p>Celebrate <strong>Learning</strong> (not failure or success)</p>
+					<img src="assets/images/workflow-complex.jpg" class="large">
 				</section>
 
 				<section>
@@ -651,6 +700,11 @@
 						<!-- http://leftfoot.com.au/blog/brooks-law-lines-of-communication-calculator-siri-shortcut -->
 					</div>
 				</section>
+
+				<section>
+					<h3>Productivity Actions</h3>
+				</section>
+
 				<section>
 					<h3>Team Productivity: Swarming</h3>
 					<p class="small">One piece continuous flow.</p>
@@ -842,6 +896,11 @@
 				</section>
 
 				<section>
+					<h3>Safe Environment for Failure</h3>
+					<p>Company Culture, CI Tools</p>
+				</section>
+
+				<section>
 					<h3>The Agile Cicle</h3>
 					<img src="assets/images/agile-cicle.jpg" alt="Agile Cicle" class="large">
 				</section>
@@ -862,7 +921,7 @@
 						<li class="fragment">People are <strong>not</strong> Interchangeable pieces</li>
 						<li class="fragment">Invest in a Healty/enjoyable environment</li>
 						<li class="fragment">Have rules at the start and <strong>later break them</strong> (adapt according to the team’s needs).</li>
-						<li class="fragment">Grom the team (& persons)</li>
+						<li class="fragment">Coach the team through the process</li>
 						<li class="fragment">Take risks & Evolve!</li>
 					</ul>
 				</section>
