--- a/index.html
+++ b/index.html
@@ -80,7 +80,6 @@
 						<li>Productivity & waste</li>
 						<li>Motivation</li>
 						<li>Improvement</li>
-						<li>Conclusions</li>
 					</ol>
 				</section>
 
@@ -290,20 +289,20 @@
 				</section>
 
 				<section>
-					<h3>Scrum teams (Squads)</h3>
-					<p class="xxsmall">(Spotify Agile model)</p>
-					<p class="xsmall">They have <strong>end-to-end responsibilities</strong> and they work together towards their <strong>long-term mission</strong></p>
-					<img src="assets/images/spotify-squads.png" alt="Spotify Squads" class="large margin-none">
-					<p class="italic xxsmall"><a href="https://blog.praveen.science/my-experience-on-spotify-agile-methodology/#ourstack">Praveen Kumar Purushothaman - My Experience on Spotify Agile Methodology</a></p>
-				</section>
-
-				<section>
 					<h3>What is a Self-organized team</h3>
 					<ul class="small">
 						<li><strong>Autonomous</strong>: distributed control</li>
 						<li><strong>Adaptable</strong>: adapts & improves</li>
 						<li><strong>Responsable</strong>: collectively</li>
 					</ul>
+				</section>
+
+				<section>
+					<h3>Scrum teams (Squads)</h3>
+					<p class="xxsmall">(Spotify Agile model)</p>
+					<p class="xsmall">They have <strong>end-to-end responsibilities</strong> and they work together towards their <strong>long-term mission</strong></p>
+					<img src="assets/images/spotify-squads.png" alt="Spotify Squads" class="large margin-none">
+					<p class="italic xxsmall"><a href="https://blog.praveen.science/my-experience-on-spotify-agile-methodology/#ourstack">Praveen Kumar Purushothaman - My Experience on Spotify Agile Methodology</a></p>
 				</section>
 
 				<section>
@@ -373,7 +372,7 @@
 							<td>team decission, no explanation</td>
 						</tr>
 					</table>
-					@TODO image!
+					<img src="assets/images/delegation-board.jpg" class="large">
 				</section>
 
 				<section>
@@ -386,6 +385,7 @@
 				<section>
 					<h3>What is the current stage of my team?</h3>
 					<p class="xxsmall"> Tribal Leadership - (Logan, King & Fischer-Wright, 2008)</p>
+					<img src="assets/images/book-tribal-leadership.jpg" class="small left-30">
 					<table class="xsmall">
 						<tr class="small">
 							<th>Stage</th>
@@ -598,6 +598,11 @@
 					<!-- https://www.mindtools.com/pages/article/newLDR_86.htm -->
 				</section>
 
+				<section>
+					<h3>Team vs Project oriented</h3>
+
+				</section>
+
 				<section data-background="assets/images/background-secondary-black.png" data-background-color="black">
 					<em>Chapter 4</em>
 					<h2>Productivity & Waste</h2>
@@ -808,7 +813,7 @@
 				<section>
 					<h3>Six Rules for Rewards</h3>
 					<p class="xsmall">(Jurgen Appelo, 2011)</p>
-					<ol class="small">
+					<ol class="small margin-bottom-5">
 						<li class="fragment"><strong>Don’t</strong> promise rewards <strong>in advance</strong>.
 							<div class="xxsmall">Give rewards at unexpected times so that people don’t change their intentions and focus on the reward.</div></li>
 						<li class="fragment">Keep anticipated rewards <strong>small</strong>.
