--- a/index.html
+++ b/index.html
@@ -593,7 +593,8 @@
 
 				<section>
 					<h3>No Managers ≈ No testers</h3>
-					<p class="xsmall">"But do we <strong>need managers anyway</strong>, with all these self-steering teams nowadays? Management 3.0 believes management is the <strong>responsibility of everyone</strong>. It is like software testing... Depending on your organization you maybe need specialized people with a focus on management."</p>
+					<p class="small">"But do we <strong>need managers anyway</strong>, with all these self-steering teams nowadays? Management 3.0 believes management is the <strong>responsibility of everyone</strong>."</p>
+					<p class="xsmall">"It is like software testing... Depending on your organization you maybe need specialized people with a focus on management."</p>
 					<p class="xxsmall right">Jurgen Appelo</p>
 				</section>
 
@@ -610,7 +611,7 @@
 
 				<section>
 					<h3>Leadership Models: The Hero</h3>
-					<p class="italic">"Soon or later we will need me (I've ensure that)"</p>
+					<p class="italic">"Soon or later we will need me (I've ensured that)"</p>
 					<p class="italic small">Dependant teams</p>
 					<img src="assets/images/hero.jpg" alt="Heroe" class="large">
 				</section>
@@ -624,43 +625,84 @@
 
 				<section>
 					<h3>Leadership Models: Host & Guests</h3>
-					<p class="italic">"Enjoy, have fun, and take responsibility"</p>
+					<p class="italic">"Enjoy, have fun, and <strong>take responsibility</strong>"</p>
 					<p class="italic small">Rules, Limits, Actions</p>
 					<img src="assets/images/party.jpg" alt="Party" class="large">
 				</section>
 
 				<section>
+					<p class="italic">Do I need to delegate <strong class="featured">everything</strong> to the team?</p>
+				</section>
+
+				<section>
 					<h3>The Delegation Board</h3>
-					<table class="xsmall center">
+					<p  class="xxsmall">(simetric)</p>
+					<img src="assets/images/delegation-board.jpg" class="medium left-30">
+					<table class="xsmall">
 						<tr>
-							<th>Tell</th>
-							<th>Sell</th>
-							<th>Consult</th>
-							<th>Agree</th>
-							<th>Advise</th>
-							<th>Inquire</th>
-							<th>Delegate</th>
+							<th></th>
+							<th>Manager</th>
+							<th>Team</th>
+							<th>Action</th>
 						</tr>
-						<tr class="xsmall italic">
-							<td>manager decission, no explanation</td>
-							<td>manager decission, try to convince</td>
-							<td>manager decission, ask first</td>
-							<td>accord</td>
-							<td>team decission, ask first</td>
-							<td>team decission, try to convince</td>
-							<td>team decission, no explanation</td>
+						<tr>
+							<td class="strong">Tell</td>
+							<td class="center xxbig">✖</td>
+							<td></td>
+							<td>no explanation</td>
+						</tr>
+						<tr>
+							<td class="strong">Sell</td>
+							<td class="center xxbig">✖</td>
+							<td></td>
+							<td>try to convince</td>
+						</tr>
+						<tr>
+							<td class="strong">Consult</td>
+							<td class="center xxbig">✖</td>
+							<td></td>
+							<td>ask first</td>
+						</tr>
+						<tr style="background:#CCC">
+							<td class="strong featured">Agree</td>
+							<td class="center xxbig featured">✖</td>
+							<td class="center xxbig featured">✖</td>
+							<td class="featured">accord</td>
+						</tr>
+						<tr>
+							<td class="strong">Advise</td>
+							<td></td>
+							<td class="center xxbig">✖</td>
+							<td>ask first</td>
+						</tr>
+						<tr>
+							<td class="strong">Inquire</td>
+							<td></td>
+							<td class="center xxbig">✖</td>
+							<td>try to convince</td>
+						</tr>
+						<tr>
+							<td class="strong">Delegate</th>
+							<td></td>
+							<td class="center xxbig">✖</td>
+							<td>no explanation</td>
 						</tr>
 					</table>
-					<img src="assets/images/delegation-board.jpg" class="large">
+
 				</section>
 
 				<section>
 					<h3>Alignment & Autonomy</h3>
 					<p class="xsmall">Autonomy with alignment increases <strong>motivation</strong>, <strong>quality</strong> and also fast releases.</p>
+					<p class="italic">The River Problem</p>
 					<img src="assets/images/spotify-alignment.png" class="large">
 					<p class="italic xxsmall"><a href="https://blog.praveen.science/my-experience-on-spotify-agile-methodology/#ourstack">Praveen Kumar Purushothaman - My Experience on Spotify Agile Methodology</a></p>
 				</section>
 
+				<section>
+					<p class="italic">The Team is ready, How can I measure its <strong>productivity</strong>?</p>
+					<p class="fragment">...in order to help them</p>
+				</section>
 
 				<section data-background="assets/images/background-secondary-black.png" data-background-color="black">
 					<em>Chapter 4</em>
@@ -674,68 +716,52 @@
 				</section>
 
 				<section>
-					<h3>How shouldn't we measure Productivity?</h3>
-					<ul class="small">
-						<li>Lines of Code</li>
-						<li>Commits</li>
-						<li>Hours</li>
-					</ul>
+					<p class="italic">Increasing productivity by <strong class="featured">removing Waste</strong></p>
 				</section>
 
 				<section>
-					<h3>How shouldn't we increase Productivity?</h3>
-					<ul class="small">
-						<li>Working more hours</li>
-						<li>Adding more people to the project</li>
-						<li>Making others work harder (not smarter)</li>
-					</ul>
-				</section>
-
-				<section>
-					<h3>Increase productivity by removing Waste</h3>
-				</section>
-
-				<section>
-					<h3>Waste: Superflous documentation</h3>
+					<h3>Avoid Superflous documentation</h3>
 					<p class="small">Unmaintained, nobody will read it.</p>
 					<img src="assets/images/papers.png" class="large">
 				</section>
 
 				<section>
-					<h3>Waste: Neverending meetings</h3>
+					<h3>Avoid Neverending meetings</h3>
 					<p class="small">No Agenda, No Goals, No Actions</p>
 					<img src="assets/images/boring-meetings.jpg" class="large">
 				</section>
 
 				<section>
-					<h3>Waste: Unused features</h3>
+					<h3>Avoid Unused features</h3>
 					<p class="small">Resources are limited.</p>
 					<img src="assets/images/spiderweb.gif" class="large">
 				</section>
 
 				<section>
-					<h3>Waste: Unreasonable Bureaucracy</h3>
+					<h3>Avoid Unreasonable Bureaucracy</h3>
 					<p class="small">Kills entrepreneurial spirit: creativity, flexibility, initiative, teamwork, self-confidence, and critical thinking.</p>
 					<p class="italic">Same approach, Same results</p>
 					<img src="assets/images/workflow-complex.jpg" class="large">
 				</section>
 
 				<section>
-					<h3>Waste: Interruptions / Context switching</h3>
+					<h3>Avoid Interruptions / Context switching</h3>
 					<div>
 						<img src="assets/images/focus.jpg" class="large">
 					</div>
 				</section>
 
 				<section>
-					<h3>Waste: Low quality code</h3>
+					<h3>Avoid Low quality code</h3>
+					<p class="small">Bugs alters planning</p>
 					<div>
 						<img src="assets/images/code-quality.jpg" class="large">
 					</div>
 				</section>
 
 				<section>
-					<h3>Waste: Oversized teams (Communication)</h3>
+					<h3>Limit team size</h3>
+					<p class="small">Comunication can be an issue</p>
 					<div class="">
 						<img src="assets/images/lines-of-communication-brooks.png" class="large">
 						<!-- http://leftfoot.com.au/blog/brooks-law-lines-of-communication-calculator-siri-shortcut -->
